# coryfitzpatrick-ai-backend

./: .dockerignore  .env.example  .gitignore  .railwayignore  DockerFile  Dockerfile  README.md  README.txt  cloudbuild.yaml  nixpacks.toml  prepare_data.py  pyproject.toml  railway.json  requirements.txt  server.py  start.sh  system_prompt.example.txt  training_data.jsonl
chroma_db/: chroma.sqlite3
data/: training_data.jsonl
docs/: testing.md
scripts/: start.sh
src/cory_ai_chatbot/: __init__.py  cli.py  prepare_data.py  server.py
tests/: __init__.py  conftest.py  test_cli.py  test_prepare_data.py  test_server.py
